añadida funcionalidad de imagenes en videojuegos (creacion, listado mediante una ruta, y borrado de la carpeta de imagenes)

--- a/templates/registrar_videojuego.html
+++ b/templates/registrar_videojuego.html
@@ -53,6 +53,7 @@
         <input class="btn-enviar" type="submit" />
     </form>
 
+    <script src="{{ url_for('static', filename='js/image_preview.js') }}"></script>
 </body>
 
 </html>
