--- a/templates/listado_videojuegos.html
+++ b/templates/listado_videojuegos.html
@@ -6,7 +6,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{{ url_for('static', filename='listado_videojuegos.css') }}"
+      href="{{ url_for('static', filename='css/listado_videojuegos.css') }}"
     />
     <title>Listado Videojuegos</title>
   </head>
@@ -19,7 +19,7 @@
       {% for v in videojuegos %}
       <div class="item" *ngFor="let v of videojuegos">
         <h3><span>{{v.nombre}}</span></h3>
-        <img alt="imagen del producto" class="imagen-item" src="" />
+        <img alt="imagen del producto" class="imagen-item" src="/imagen-videojuego/{{v.id}}" />
         <p>Precio: <span>{{v.precio}}</span>€</p>
         <p>Plataforma: <span>{{v.plataforma}}</span></p>
         <a
