--- a/static/css/inicio.css
+++ b/static/css/inicio.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 *,
 *::before,
 *::after {
@@ -37,46 +36,37 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-h2{
-    width: -moz-fit-content;
-    width: fit-content;
-    margin: 20px auto;
-}
-
-/* Listado administracion */
-.cont-listado {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    padding: 30px;
-}
-
-.contenedor-items {
+.navbar{
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
+    gap: 1em;
+    background-color: #0039a3;
+    padding: 10px;
 }
-
-.item {
-    background-color: #303134;
+.last{
     display: flex;
-    width: 300px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-    padding: 20px 10px 10px;
-    border-radius: 10px;
+    justify-content: end;
+    flex: 1;
 }
 
-.imagen-item {
-    width: 250px;
-    aspect-ratio: 19 / 11;
-    border-radius: 10px;
-    object-fit: cover;
+a {
+    color: #0039a3;
+}
+
+a:hover {
+    color: #0059ff;
+}
+
+a:active {
+    color: #3a79ec;
+}
+
+.item p {
+    width: 90%;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
