--- a/templates/listado_videojuegos.html
+++ b/templates/listado_videojuegos.html
@@ -6,6 +6,11 @@
     <link
       rel="stylesheet"
       type="text/css"
+      href="{{ url_for('static', filename='css/inicio.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
       href="{{ url_for('static', filename='css/listado_videojuegos.css') }}"
     />
     <title>Listado Videojuegos</title>
@@ -13,8 +18,8 @@
 
   <body>
     {% include "menu.html"%}
-    <div><a href="registrar-videojuego">Nuevo videojuego</a></div>
-    <h2>listado de videojuegos</h2>
+    <div class="navbar"><a class="btn-primary" href="registrar-videojuego">Nuevo videojuego</a></div>
+    <h2 >listado de videojuegos</h2>
     <div class="contenedor-items">
       {% for v in videojuegos %}
       <div class="item" *ngFor="let v of videojuegos">
@@ -22,7 +27,12 @@
         <img alt="imagen del producto" class="imagen-item" src="/imagen-videojuego/{{v.id}}" />
         <p>Precio: <span>{{v.precio}}</span>€</p>
         <p>Plataforma: <span>{{v.plataforma}}</span></p>
+        <p>Desarrollador: <span>{{v.desarrollador}}</span></p>
+        <p>Genero: <span>{{v.genero}}</span></p>
+        <p>Fecha de lanzamiento: <span>{{v.fecha_lanzamiento}}</span></p>
+        <p>Descripcion: <span>{{v.descripcion}}</span></p>
         <a
+          class="btn-primary"
           href="borrar-videojuego/{{v.id}}"
           onclick="confirm('Estas seguro/a?')"
           >Borrar producto</a
