--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,4 @@
-<div>
-    <a href="listar-videojuegos">Gestionar Productos</a>
-    <a href="" onclick="alert('por hacer...')">Gestionar Pedidos</a>
+<div class="navbar">
+    <a class="btn-primary" href="listar-videojuegos">Gestionar Productos</a>
+    <a class="btn-primary" href="" onclick="alert('por hacer...')">Gestionar Pedidos</a>
 </div>
