--- a/templates/registrar_videojuego.html
+++ b/templates/registrar_videojuego.html
@@ -9,6 +9,11 @@
       type="text/css"
       href="{{ url_for('static', filename='css/inicio.css') }}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='css/registro.css') }}"
+    />
     <title>Document</title>
 </head>
 
@@ -59,6 +64,7 @@
     </form>
 
     <script src="{{ url_for('static', filename='js/image_preview.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/formulario_inputs.js') }}"></script>
 </body>
 
 </html>
