aplicada funcionalidad de listar productos de carrito y borrar productos uno en uno, y vaciar carrito completo

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -4,7 +4,7 @@
 
   <div class="last">
     <!-- <a class="btn-primary" href="/admin/">Ir a administracion</a> -->
-    <a class="btn-primary" href="/admin">Ir a administracion</a>
+    <a class="btn-primary" href="/admin/">Ir a administracion</a>
   </div>
 </div>
 
