--- a/angular/src/app/detalles-videojuego/detalles-videojuego.component.html
+++ b/angular/src/app/detalles-videojuego/detalles-videojuego.component.html
@@ -1,7 +1,7 @@
 <div class="contenedor-detalles">
     <h2 class="nombre">{{videojuego.nombre}}</h2>
     <div class="cabecera">
-        <img class="imagen-detalles" src="/web-services/imagen-videojuego/{{videojuego.id}}">
+        <img alt="imagen de producto: {{videojuego.nombre}}" class="imagen-detalles" src="/imagen-videojuego/{{videojuego.id}}">
         <div class="textos">
             <p><span>{{videojuego.plataforma}}</span></p>
             <p>Precio: <span>{{videojuego.precio}}€</span></p>
