--- a/angular/src/app/listado/listado.component.html
+++ b/angular/src/app/listado/listado.component.html
@@ -4,7 +4,7 @@
     <div class="contenedor-items">
         <div class="item" *ngFor="let v of videojuegos">
             <h3><span>{{v.nombre}}</span></h3>
-            <img class="imagen-item" src="/web-services/imagen-videojuego/{{v.id}}">
+            <img alt="imagen de producto: {{v.nombre}}" class="imagen-item" src="/imagen-videojuego/{{v.id}}">
             <p>Precio: <span>{{v.precio}}</span>€</p>
             <p>Plataforma: <span>{{v.plataforma}}</span></p>
 
