--- a/templates/registrar_videojuego.html
+++ b/templates/registrar_videojuego.html
@@ -29,36 +29,36 @@
         </label>
 
         <div class="input-box no-error">
-            <input type="text" name="nombre" required minlength="2" maxlength="20">
+            <input type="text" id="nombre" name="nombre" required minlength="2" maxlength="20">
             <label for="nombre">Nombre</label>
         </div>
 
         <div class="textarea-box no-error">
-            <textarea name="descripcion" required minlength="2" maxlength="200"></textarea>
+            <textarea id="descripcion" name="descripcion" required minlength="2" maxlength="200"></textarea>
             <label for="descripcion">Descripcion</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="number" step=".01" name="precio" required pattern="[0-9]+(,[0-9])?" />
+            <input type="number" step=".01" id="precio" name="precio" required pattern="[0-9]+(,[0-9])?" />
             <label for="precio">Precio</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="text" step=".01" name="plataforma" required minlength="2" maxlength="30" />
+            <input type="text" step=".01" id="plataforma" name="plataforma" required minlength="2" maxlength="30" />
             <label for="plataforma">Plataforma</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="text" step=".01" name="genero" required minlength="2" maxlength="30" />
+            <input type="text" step=".01" id="genero" name="genero" required minlength="2" maxlength="30" />
             <label for="genero">Genero</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="text" step=".01" name="desarrollador" required minlength="2" maxlength="30" />
+            <input type="text" step=".01" id="desarrollador" name="desarrollador" required minlength="2" maxlength="30" />
             <label for="desarrollador">Desarrollador</label>
         </div>
 
-        <input type="date" value="2017-01-01" min="2005-01-01" name="fecha_lanzamiento" />
+        <input type="date" value="2017-01-01" min="2005-01-01" id="fecha_lanzamiento" name="fecha_lanzamiento" />
 
         <input class="btn-enviar" type="submit" />
     </form>
