Añadido realizar pedido en cliente y listar pedidos en administracion

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,4 @@
 <div class="navbar">
     <a class="btn-primary" href="listar-videojuegos">Gestionar Productos</a>
-    <a class="btn-primary" href="" onclick="alert('por hacer...')">Gestionar Pedidos</a>
+    <a class="btn-primary" href="listar-pedidos">Gestionar Pedidos</a>
 </div>
