--- a/angular/src/app/detalles-videojuego/detalles-videojuego.component.css
+++ b/angular/src/app/detalles-videojuego/detalles-videojuego.component.css
@@ -1,7 +1,6 @@
-
-.contenedor-detalles{
+.contenedor-detalles {
     width: 90%;
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 20px auto;
     display: flex;
     flex-direction: column;
@@ -12,7 +11,8 @@
     border-radius: 10px;
     background-color: #303134;
 }
-.cabecera{
+
+.cabecera {
     width: 80%;
     display: flex;
     flex-direction: row;
@@ -21,11 +21,14 @@
     flex-wrap: wrap;
     gap: 2rem;
 }
-.nombre{
+
+.nombre {
     margin-bottom: 20px;
 }
-.textos{
-    width: 300px;
+
+.textos {
+    width: 380px;
+    height: 218px;
     aspect-ratio: 19 / 11;
     display: flex;
     flex-direction: column;
@@ -34,26 +37,120 @@
     border-radius: 10px;
     font-size: 20px;
     gap: 1.5rem;
-    background-color: #36383b;
     padding: 20px;
+    background-color: #36383b;
+
+    /* Estilos para el background */
+    /* background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;  */
 }
-.imagen-detalles {
-    width: 300px;
-    aspect-ratio: 19 / 11;
+
+.contenedor-cantidad {
+    padding: 5px 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.7rem;
+    background-color: #ffffff;
+    border: 1px solid #e5e5e5;
+    border-radius: 30px;
+    filter: drop-shadow(0px 1px 0px #efefef) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
+
+}
+
+.contenedor-cantidad #cantidad {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2px;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+}
+
+.contenedor-cantidad #restar,
+.contenedor-cantidad #anadir {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    outline: none;
+    background-color: transparent;
+    padding-bottom: 2px;
+}
+
+.contenedor-cantidad #restar:hover {
+    content: url("/static/img/restar_hover.png");
+}
+
+.contenedor-cantidad #anadir:hover {
+    content: url("/static/img/anadir_hover.png");
+}
+
+
+.reproductor {
+    position: relative;
+    width: 380px;
+    height: 218px;
     border-radius: 10px;
+    overflow: hidden;
+    -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+    -webkit-transition: -webkit-transform 0.2s ease, -webkit-box-shadow;
+    transition: -webkit-transform 0.2s ease, -webkit-box-shadow;
+    transition: transform 0.2s ease, box-shadow;
+    transition: transform 0.2s ease, box-shadow, -webkit-transform 0.2s ease, -webkit-box-shadow;
+}
+
+.reproductor .imagen-item,
+.reproductor .video-item {
+    position: absolute;
+    border-radius: 10px;
+    overflow: hidden;
+    -webkit-transition: opacity 0.2s ease, visibility 0.2s ease;
+    transition: opacity 0.2s ease, visibility 0.2s ease;
+}
+
+.reproductor .imagen-item {
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
 }
-.separador{
+
+.reproductor .video-item {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+.reproductor:hover {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
+}
+
+.separador {
     width: 90%;
     height: 1px;
     background-color: #36383b;
 }
-.separador2{
+
+.separador2 {
     width: 100%;
     height: 1px;
     background-color: #36383b;
 }
-.mas-datos{
+
+.mas-datos {
     flex: 1;
     width: 90%;
     display: flex;
@@ -61,7 +158,8 @@
     gap: 1rem;
     margin-top: 20px;
 }
-.dato{
+
+.dato {
     width: 90%;
     margin: auto;
     display: flex;
