--- a/angular/src/app/videojuegos/videojuegos.component.css
+++ b/angular/src/app/videojuegos/videojuegos.component.css
@@ -3,6 +3,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 30px 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
