--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-critters-container>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='css/inicio.css') }}"
-    />
-    <title>Document</title>
-</head>
+  <meta charset="utf-8">
+  <title>angular_videojuegos
+  </title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>*,*:before,*:after{margin:0;padding:0;box-sizing:border-box}body{background-color:#272727;color:#fff;font-family:Roboto,sans-serif}
+</style><link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css"></noscript></head>
 <body>
-    <div>Parte Publica de la tienda en angular</div>
-    <div><a href="admin/">Acceder a la administracion de la tienda</a></div>
-</body>
+  <app-root></app-root>
+<script src="polyfills.js" type="module"></script><script src="main.js" type="module"></script></body>
 </html>
+
