--- a/angular/src/app/pedido/pedido.component.html
+++ b/angular/src/app/pedido/pedido.component.html
@@ -1,4 +1,4 @@
-<form class="formulario" action="registrar_producto.php" method="post" enctype="multipart/form-data">
+<form class="formulario" method="post" enctype="multipart/form-data">
     <h2>Rellena los datos de tu pedido</h2>
 
     <div class="input-box no-error">
