--- a/templates/editar_videojuego.html
+++ b/templates/editar_videojuego.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <form class="formulario" action="/admin/guardar-nuevo-videojuego" method="post" enctype="multipart/form-data">
-        <h2>Registrar Videojuego</h2>
+    <form class="formulario" action="/admin/guardar-cambios-videojuego" method="post" enctype="multipart/form-data">
+        <h2>Editar Videojuego</h2>
 
-        <img class="preview videojuego-img" id="preview-img" src="/static/img/videojuegos/default_game.png" alt="Imagen por defecto">
-
+        <img class="preview videojuego-img" id="preview-img" src="/imagen-videojuego/{{videojuego.id}}" alt="Imagen del Videojuego">
+        <input type="text" id="id" name="id" value="{{ videojuego.id }}" style="display: none;">
         <label class="fileInput">
             <span>Foto Portada: Selecciona o arrastra una Foto</span>
             <input type="file" name="fotoPortada" id="fotoPortada" />
@@ -34,36 +34,36 @@
         </label>
 
         <div class="input-box no-error">
-            <input type="text" id="nombre" name="nombre" required minlength="2" maxlength="20">
+            <input type="text" id="nombre" name="nombre" required minlength="2" maxlength="20" value="{{ videojuego.nombre }}">
             <label for="nombre">Nombre</label>
         </div>
 
         <div class="textarea-box no-error">
-            <textarea id="descripcion" name="descripcion" required minlength="2" maxlength="200"></textarea>
+            <textarea id="descripcion" name="descripcion" required minlength="2" maxlength="200">{{ videojuego.descripcion }}</textarea>
             <label for="descripcion">Descripcion</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="number" step=".01" id="precio" name="precio" required pattern="[0-9]+(,[0-9])?" />
+            <input type="number" step=".01" id="precio" name="precio" required pattern="[0-9]+(,[0-9])?" value="{{ videojuego.precio }}" />
             <label for="precio">Precio</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="text" step=".01" id="plataforma" name="plataforma" required minlength="2" maxlength="30" />
+            <input type="text" step=".01" id="plataforma" name="plataforma" required minlength="2" maxlength="30" value="{{ videojuego.plataforma }}" />
             <label for="plataforma">Plataforma</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="text" step=".01" id="genero" name="genero" required minlength="2" maxlength="30" />
+            <input type="text" step=".01" id="genero" name="genero" required minlength="2" maxlength="30" value="{{ videojuego.genero }}" />
             <label for="genero">Genero</label>
         </div>
 
         <div class="input-box no-error">
-            <input type="text" step=".01" id="desarrollador" name="desarrollador" required minlength="2" maxlength="30" />
+            <input type="text" step=".01" id="desarrollador" name="desarrollador" required minlength="2" maxlength="30" value="{{ videojuego.desarrollador }}" />
             <label for="desarrollador">Desarrollador</label>
         </div>
 
-        <input type="date" value="2017-01-01" min="2005-01-01" id="fecha_lanzamiento" name="fecha_lanzamiento" />
+        <input type="date" value="{{ videojuego.fecha_lanzamiento }}" min="2005-01-01" id="fecha_lanzamiento" name="fecha_lanzamiento" />
 
         <input class="btn-enviar" type="submit" />
     </form>
